# basechem

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  gulpfile.js  manage.py  package-lock.json  package.json  run_tests.sh
.github/: dependabot.yml
.github/workflows/: pr_and_merge_checks.yml
basechem/: load_env.py  urls.py  wsgi.py
basechem/common/: admin_emailer.py  analysis_utils.py  analytic.py  constants.py  context_processors.py  dtx_utils.py  file_utils.py  inductive_utils.py  middleware.py  mmpdb_utils.py  propcalc_utils.py  rdkit_utils.py  slurm_utils.py
basechem/common/toklat/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
basechem/common/toklat/example_usage/: predict_and_visualize.ipynb
basechem/common/toklat/models/: model_v0.pkl
basechem/common/toklat/src/toklat/: feature_generation.py  feature_potential_helpers.py  feature_potentials.py  model.py  viz_utils.py
basechem/main/: admin.py  admin_filters.py  assay_emailer_utils.py  constants.py  db_utils.py  forms.py  mixins.py  mmp_utils.py  tasks.py  urls.py  utils.py
basechem/mni_common/: rdkit_utils.py  storage.py  storage_backends.py  str_utils.py  urls.py
basechem/settings/: base.py  deploy.py
basechem/sso/: urls.py  utils.py  views.py
basechem/static/: 502.html
basechem/templates/: 404.html  500.html  base.html
deployment/: .env.example  Dockerfile  entrypoint.dev.sh  entrypoint.prod.sh  services.dev.ini  services.prod.ini
requirements/: base.txt
(+210 files in other folders)
